ecmascript/parser/tests/test262-error-references/fail/dee9ac08aa5be125.js.stderr
error: Unexpected token `.`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/dee9ac08aa5be125.js:1:7
  |
1 | ({a([a.b]){}})
  |       ^

